replace ' ' with '_' in html filenames
(andy5995/mhwkb#45)

--- a/Aboriginal_and_Torres_Strait_Islander_people.html
+++ b/Aboriginal_and_Torres_Strait_Islander_people.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>forum (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>Aboriginal_and_Torres_Strait_Islander_people (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>forum (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>Aboriginal_and_Torres_Strait_Islander_people (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="https://www.beyondblue.org.au/">Beyond Blue</a><br />
 <p class="date">date: na<br />
 </p>
