--- a/Australia.html
+++ b/Australia.html
@@ -11,13 +11,13 @@
 <a class="title" href="https://www.health.qld.gov.au/news-alerts/news/men-how-to-have-conversation-mate-mental-health">Men: how to have a conversation with a mate about mental health</a><br />
 <p class="date">date: 2017-10-09<br />
 </p>
-<a href="men.html">men</a>, <a href="friendships.html">friendships</a>, <a href="mates.html">mates</a>, <a href="providing support.html">providing support</a>, <a href="advice.html">advice</a>, <a href="advice.html">Australia</a><br /><br /><a class="title" href="https://www.ruok.org.au/">R U OK?</a><br />
+<a href="men.html">men</a>, <a href="friendships.html">friendships</a>, <a href="mates.html">mates</a>, <a href="providing_support.html">providing_support</a>, <a href="advice.html">advice</a>, <a href="advice.html">Australia</a><br /><br /><a class="title" href="https://www.ruok.org.au/">R U OK?</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="communication.html">communication</a>, <a href="support.html">support</a>, <a href="suicide prevention.html">suicide prevention</a>, <a href="crisis.html">crisis</a>, <a href="directory.html">directory</a>, <a href="resources.html">resources</a>, <a href="resources.html">Australia</a><br /><br /><a class="title" href="https://www.beyondblue.org.au/">Beyond Blue</a><br />
+<a href="communication.html">communication</a>, <a href="support.html">support</a>, <a href="suicide_prevention.html">suicide_prevention</a>, <a href="crisis.html">crisis</a>, <a href="directory.html">directory</a>, <a href="resources.html">resources</a>, <a href="resources.html">Australia</a><br /><br /><a class="title" href="https://www.beyondblue.org.au/">Beyond Blue</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="Australia.html">Australia</a>, <a href="chat.html">chat</a>, <a href="forum.html">forum</a>, <a href="resources.html">resources</a>, <a href="LGBTQ.html">LGBTQ</a>, <a href="Aboriginal and Torres Strait Islander people.html">Aboriginal and Torres Strait Islander people</a>, <a href="community.html">community</a>, <a href="youth.html">youth</a>, <a href="pregnancy.html">pregnancy</a>, <a href="pregnancy.html">seniors</a><br /><br />
+<a href="Australia.html">Australia</a>, <a href="chat.html">chat</a>, <a href="forum.html">forum</a>, <a href="resources.html">resources</a>, <a href="LGBTQ.html">LGBTQ</a>, <a href="Aboriginal_and_Torres_Strait_Islander_people.html">Aboriginal_and_Torres_Strait_Islander_people</a>, <a href="community.html">community</a>, <a href="youth.html">youth</a>, <a href="pregnancy.html">pregnancy</a>, <a href="pregnancy.html">seniors</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
