--- a/Ben_Goldacre.html
+++ b/Ben_Goldacre.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Ben Goldacre (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>Ben_Goldacre (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>Ben Goldacre (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>Ben_Goldacre (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="http://a.co/fUqjjn0">Bad Pharma: How Drug Companies Mislead Doctors and Harm Patients</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="medication.html">medication</a>, <a href="Ben Goldacre.html">Ben Goldacre</a>, <a href="Ben Goldacre.html">doctors</a><br /><br />
+<a href="books.html">books</a>, <a href="medication.html">medication</a>, <a href="Ben_Goldacre.html">Ben_Goldacre</a>, <a href="Ben_Goldacre.html">doctors</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
