--- a/Thich_Nhat_Hanh.html
+++ b/Thich_Nhat_Hanh.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Thich Nhat Hanh (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>Thich_Nhat_Hanh (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>Thich Nhat Hanh (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>Thich_Nhat_Hanh (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="https://plumvillage.org/">Plum Village - Mindfulness Practice Center</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="Buddhism.html">Buddhism</a>, <a href="mindfulness.html">mindfulness</a>, <a href="Thich Nhat Hanh.html">Thich Nhat Hanh</a>, <a href="Thich Nhat Hanh.html">spirituality</a><br /><br />
+<a href="Buddhism.html">Buddhism</a>, <a href="mindfulness.html">mindfulness</a>, <a href="Thich_Nhat_Hanh.html">Thich_Nhat_Hanh</a>, <a href="Thich_Nhat_Hanh.html">spirituality</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
