--- a/afghanistan.html
+++ b/afghanistan.html
@@ -11,7 +11,7 @@
 <a class="title" href="http://jamanetwork.com/journals/jama/fullarticle/202463">Mental Health Problems, Use of Mental Health Services, and Attrition From Military Service After Returning From Deployment to Iraq or Afghanistan</a><br />
 <p class="date">date: 2006-03-01<br />
 </p>
-<a href="military.html">military</a>, <a href="mental health services.html">mental health services</a>, <a href="iraq.html">iraq</a>, <a href="iraq.html">afghanistan</a><br /><br />
+<a href="military.html">military</a>, <a href="mental_health_services.html">mental_health_services</a>, <a href="iraq.html">iraq</a>, <a href="iraq.html">afghanistan</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
