--- a/bipolar_disorder.html
+++ b/bipolar_disorder.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>bipolar disorder (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>bipolar_disorder (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>bipolar disorder (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>bipolar_disorder (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="https://natashatracy.com/bipolar-disorder/bipolar-invisible-illness-lets-visible/">Bipolar Is an Invisible Illness — Let’s Make It Visible</a><br />
 <p class="date">date: 2017-10-01<br />
 </p>
-<a href="bipolar disorder.html">bipolar disorder</a>, <a href="bipolar disorder.html">illness</a><br /><br />
+<a href="bipolar_disorder.html">bipolar_disorder</a>, <a href="bipolar_disorder.html">illness</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
