--- a/community.html
+++ b/community.html
@@ -11,13 +11,13 @@
 <a class="title" href="http://theicarusproject.net/">The Icarus Project</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="social_justice.html">social_justice</a>, <a href="community.html">community</a>, <a href="community.html">Facebook</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institue</a><br />
+<a href="social_justice.html">social_justice</a>, <a href="community.html">community</a>, <a href="community.html">Facebook</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institute</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="workplace.html">workplace</a>, <a href="community.html">community</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="education.html">education</a>, <a href="training.html">training</a>, <a href="training.html">research</a><br /><br /><a class="title" href="https://www.beyondblue.org.au/">Beyond Blue</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="Australia.html">Australia</a>, <a href="chat.html">chat</a>, <a href="forum.html">forum</a>, <a href="resources.html">resources</a>, <a href="LGBTQ.html">LGBTQ</a>, <a href="Aboriginal and Torres Strait Islander people.html">Aboriginal and Torres Strait Islander people</a>, <a href="community.html">community</a>, <a href="youth.html">youth</a>, <a href="pregnancy.html">pregnancy</a>, <a href="pregnancy.html">seniors</a><br /><br />
+<a href="Australia.html">Australia</a>, <a href="chat.html">chat</a>, <a href="forum.html">forum</a>, <a href="resources.html">resources</a>, <a href="LGBTQ.html">LGBTQ</a>, <a href="Aboriginal_and_Torres_Strait_Islander_people.html">Aboriginal_and_Torres_Strait_Islander_people</a>, <a href="community.html">community</a>, <a href="youth.html">youth</a>, <a href="pregnancy.html">pregnancy</a>, <a href="pregnancy.html">seniors</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
