--- a/mental_health.html
+++ b/mental_health.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1>mental_health (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
-<a class="title" href="https://github.com/bhits/consent2share">Consent2Share</a><br />
+<a class="title" href="https://www.quora.com/What-are-mental-health-symptoms-you-should-never-ignore">What are mental health symptoms you should never ignore?</a><br />
+<p class="date">date: 2017-09-25<br />
+</p>
+<a href="mental_health.html">mental_health</a>, <a href="symptoms.html">symptoms</a>, <a href="symptoms.html">ignore</a><br /><br /><a class="title" href="https://github.com/bhits/consent2share">Consent2Share</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="GPLv3.html">GPLv3</a>, <a href="over-arching.html">over-arching</a>, <a href="mental_health.html">mental_health</a>, <a href="DS4P.html">DS4P</a>, <a href="SAMHSA.html">SAMHSA</a>, <a href="SAMHSA.html">open_source</a><br /><br />
