--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://www.omicsonline.org/open-access/benefits-of-using-music-therapy-in-mental-disorders-2090-2719-1000116.php?aid=76546">Benefits of Using Music Therapy in Mental Disorders</a><br />
 <p class="date">date: 2016-07-13<br />
 </p>
-<a href="research.html">research</a>, <a href="publication.html">publication</a>, <a href="journal.html">journal</a>, <a href="journal.html">music_therapy</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institue</a><br />
+<a href="research.html">research</a>, <a href="publication.html">publication</a>, <a href="journal.html">journal</a>, <a href="journal.html">music_therapy</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institute</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="workplace.html">workplace</a>, <a href="community.html">community</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="education.html">education</a>, <a href="training.html">training</a>, <a href="training.html">research</a><br /><br />
