--- a/self_help.html
+++ b/self_help.html
@@ -11,7 +11,7 @@
 <a class="title" href="http://a.co/eI8V3e1">Running on Empty: Overcome Your Childhood Emotional Neglect</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="self_help.html">self_help</a>, <a href="PhD.html">PhD</a>, <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Jonice Webb.html">Jonice Webb</a>, <a href="Jonice Webb.html">Christine Musello</a><br /><br />
+<a href="self_help.html">self_help</a>, <a href="PhD.html">PhD</a>, <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Jonice_Webb.html">Jonice_Webb</a>, <a href="Jonice_Webb.html">Christine_Musello</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
