--- a/substance_abuse.html
+++ b/substance_abuse.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>substance abuse (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>substance_abuse (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>substance abuse (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>substance_abuse (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="https://www.samhsa.gov/veterans-military-families">SAMHSA: Veterans and Military Families</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="veterans.html">veterans</a>, <a href="family.html">family</a>, <a href="substance abuse.html">substance abuse</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br />
+<a href="veterans.html">veterans</a>, <a href="family.html">family</a>, <a href="substance_abuse.html">substance_abuse</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
