--- a/suicide_prevention.html
+++ b/suicide_prevention.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>crisis (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>suicide_prevention (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>crisis (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>suicide_prevention (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="https://www.veteranscrisisline.net/GetHelp/ResourceLocator.aspx">Veterans Crisis Line</a><br />
 <p class="date">date: na<br />
 </p>
