--- a/training.html
+++ b/training.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://centerformsc.org/">Center for Mindful Self-Compassion</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="mindfulness.html">mindfulness</a>, <a href="training.html">training</a>, <a href="teaching.html">teaching</a>, <a href="education.html">education</a>, <a href="education.html">PhD</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institue</a><br />
+<a href="mindfulness.html">mindfulness</a>, <a href="training.html">training</a>, <a href="teaching.html">teaching</a>, <a href="education.html">education</a>, <a href="education.html">PhD</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institute</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="workplace.html">workplace</a>, <a href="community.html">community</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="education.html">education</a>, <a href="training.html">training</a>, <a href="training.html">research</a><br /><br />
