--- a/veterans.html
+++ b/veterans.html
@@ -14,13 +14,13 @@
 <a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br /><a class="title" href="https://www.veteranscrisisline.net/GetHelp/ResourceLocator.aspx">Veterans Crisis Line</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="crisis.html">crisis</a>, <a href="emergency.html">emergency</a>, <a href="emergency.html">suicide prevention</a><br /><br /><a class="title" href="https://www.nami.org/Find-Support/Veterans-and-Active-Duty">NAMI: National Alliance on Mental Illness</a><br />
+<a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="crisis.html">crisis</a>, <a href="emergency.html">emergency</a>, <a href="emergency.html">suicide_prevention</a><br /><br /><a class="title" href="https://www.nami.org/Find-Support/Veterans-and-Active-Duty">NAMI: National Alliance on Mental Illness</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="veterans.html">veterans</a>, <a href="NAMI.html">NAMI</a>, <a href="NAMI.html">resources</a><br /><br /><a class="title" href="https://www.samhsa.gov/veterans-military-families">SAMHSA: Veterans and Military Families</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="veterans.html">veterans</a>, <a href="family.html">family</a>, <a href="substance abuse.html">substance abuse</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br /><a class="title" href="https://www.youtube.com/playlist?list=PLs6ORPE7MX1tdcM5Ec3IHq3s18XFSJr-T">Buddhist Mindfulness Retreat for Veterans</a><br />
+<a href="veterans.html">veterans</a>, <a href="family.html">family</a>, <a href="substance_abuse.html">substance_abuse</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br /><a class="title" href="https://www.youtube.com/playlist?list=PLs6ORPE7MX1tdcM5Ec3IHq3s18XFSJr-T">Buddhist Mindfulness Retreat for Veterans</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="veterans.html">veterans</a>, <a href="mindfulness.html">mindfulness</a>, <a href="retreat.html">retreat</a>, <a href="youtube.html">youtube</a>, <a href="youtube.html">Buddhism</a><br /><br />
