--- a/workplace.html
+++ b/workplace.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>workplace (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
-<a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institue</a><br />
+<a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institute</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="workplace.html">workplace</a>, <a href="community.html">community</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="education.html">education</a>, <a href="training.html">training</a>, <a href="training.html">research</a><br /><br />
