--- a/Buddhism.html
+++ b/Buddhism.html
@@ -14,7 +14,7 @@
 <a href="veterans.html">veterans</a>, <a href="mindfulness.html">mindfulness</a>, <a href="retreat.html">retreat</a>, <a href="youtube.html">youtube</a>, <a href="youtube.html">Buddhism</a><br /><br /><a class="title" href="https://plumvillage.org/">Plum Village - Mindfulness Practice Center</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="Buddhism.html">Buddhism</a>, <a href="mindfulness.html">mindfulness</a>, <a href="Thich Nhat Hanh.html">Thich Nhat Hanh</a>, <a href="Thich Nhat Hanh.html">spirituality</a><br /><br />
+<a href="Buddhism.html">Buddhism</a>, <a href="mindfulness.html">mindfulness</a>, <a href="Thich_Nhat_Hanh.html">Thich_Nhat_Hanh</a>, <a href="Thich_Nhat_Hanh.html">spirituality</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
