--- a/David_Healy.html
+++ b/David_Healy.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>David Healy (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>David_Healy (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>David Healy (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>David_Healy (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="https://www.amazon.com/Pharmageddon-David-Healy/dp/0520275764">Pharmageddon</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="David Healy.html">David Healy</a>, <a href="doctors.html">doctors</a>, <a href="doctors.html">medication</a><br /><br />
+<a href="books.html">books</a>, <a href="David_Healy.html">David_Healy</a>, <a href="doctors.html">doctors</a>, <a href="doctors.html">medication</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
