--- a/John_Abramson.html
+++ b/John_Abramson.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>John Abramson (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>John_Abramson (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>John Abramson (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>John_Abramson (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="http://a.co/aOGY247">Overdosed America: The Broken Promise of American Medicine</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="medication.html">medication</a>, <a href="John Abramson.html">John Abramson</a>, <a href="John Abramson.html">doctors</a><br /><br />
+<a href="books.html">books</a>, <a href="medication.html">medication</a>, <a href="John_Abramson.html">John_Abramson</a>, <a href="John_Abramson.html">doctors</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
