--- a/Jonice_Webb.html
+++ b/Jonice_Webb.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Christine Musello (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>Jonice_Webb (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>Christine Musello (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>Jonice_Webb (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="http://a.co/eI8V3e1">Running on Empty: Overcome Your Childhood Emotional Neglect</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="self_help.html">self_help</a>, <a href="PhD.html">PhD</a>, <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Jonice Webb.html">Jonice Webb</a>, <a href="Jonice Webb.html">Christine Musello</a><br /><br />
+<a href="self_help.html">self_help</a>, <a href="PhD.html">PhD</a>, <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Jonice_Webb.html">Jonice_Webb</a>, <a href="Jonice_Webb.html">Christine_Musello</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
