--- a/Lisa_Cosgrove.html
+++ b/Lisa_Cosgrove.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Lisa Cosgrove (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>Lisa_Cosgrove (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>Lisa Cosgrove (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>Lisa_Cosgrove (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="http://a.co/esrRJm4">Psychiatry Under the Influence: Institutional Corruption, Social Injury, and Prescriptions for Reform</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="journalism.html">journalism</a>, <a href="Robert Whitaker.html">Robert Whitaker</a>, <a href="psychiatry.html">psychiatry</a>, <a href="medication.html">medication</a>, <a href="medication.html">Lisa Cosgrove</a><br /><br />
+<a href="books.html">books</a>, <a href="journalism.html">journalism</a>, <a href="Robert_Whitaker.html">Robert_Whitaker</a>, <a href="psychiatry.html">psychiatry</a>, <a href="medication.html">medication</a>, <a href="medication.html">Lisa_Cosgrove</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
