--- a/Otis_Webb_Brawley.html
+++ b/Otis_Webb_Brawley.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Otis Webb Brawley (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>Otis_Webb_Brawley (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>Otis Webb Brawley (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>Otis_Webb_Brawley (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="http://a.co/acYNpoJ">How We Do Harm: A Doctor Breaks Ranks About Being Sick in America</a><br />
 <p class="date">date: 2017-09-23<br />
 </p>
-<a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Otis Webb Brawley.html">Otis Webb Brawley</a>, <a href="health care.html">health care</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts-of-interest</a><br /><br />
+<a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Otis_Webb_Brawley.html">Otis_Webb_Brawley</a>, <a href="health_care.html">health_care</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts-of-interest</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
