--- a/PhD.html
+++ b/PhD.html
@@ -11,10 +11,10 @@
 <a class="title" href="https://www.goodreads.com/book/show/239464.Your_Drug_May_Be_Your_Problem">Your Drug May Be Your Problem: How & Why to Stop Taking Psychiatric Medications</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="Peter Breggin.html">Peter Breggin</a>, <a href="M.D..html">M.D.</a>, <a href="David Cohen.html">David Cohen</a>, <a href="PhD.html">PhD</a>, <a href="PhD.html">medication</a><br /><br /><a class="title" href="http://a.co/eI8V3e1">Running on Empty: Overcome Your Childhood Emotional Neglect</a><br />
+<a href="books.html">books</a>, <a href="Peter_Breggin.html">Peter_Breggin</a>, <a href="M.D..html">M.D.</a>, <a href="David_Cohen.html">David_Cohen</a>, <a href="PhD.html">PhD</a>, <a href="PhD.html">medication</a><br /><br /><a class="title" href="http://a.co/eI8V3e1">Running on Empty: Overcome Your Childhood Emotional Neglect</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="self_help.html">self_help</a>, <a href="PhD.html">PhD</a>, <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Jonice Webb.html">Jonice Webb</a>, <a href="Jonice Webb.html">Christine Musello</a><br /><br /><a class="title" href="https://behavioraltech.org/resources/">Dialectical Behavior Therapy (DBT) Resources</a><br />
+<a href="self_help.html">self_help</a>, <a href="PhD.html">PhD</a>, <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Jonice_Webb.html">Jonice_Webb</a>, <a href="Jonice_Webb.html">Christine_Musello</a><br /><br /><a class="title" href="https://behavioraltech.org/resources/">Dialectical Behavior Therapy (DBT) Resources</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="dbt.html">dbt</a>, <a href="therapy.html">therapy</a>, <a href="non-pharmacological.html">non-pharmacological</a>, <a href="Marsh_Linehan.html">Marsh_Linehan</a>, <a href="PhD.html">PhD</a>, <a href="PhD.html">ABPP</a><br /><br /><a class="title" href="https://centerformsc.org/">Center for Mindful Self-Compassion</a><br />
