--- a/USA.html
+++ b/USA.html
@@ -14,10 +14,10 @@
 <a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br /><a class="title" href="https://www.veteranscrisisline.net/GetHelp/ResourceLocator.aspx">Veterans Crisis Line</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="crisis.html">crisis</a>, <a href="emergency.html">emergency</a>, <a href="emergency.html">suicide prevention</a><br /><br /><a class="title" href="https://www.samhsa.gov/veterans-military-families">SAMHSA: Veterans and Military Families</a><br />
+<a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="crisis.html">crisis</a>, <a href="emergency.html">emergency</a>, <a href="emergency.html">suicide_prevention</a><br /><br /><a class="title" href="https://www.samhsa.gov/veterans-military-families">SAMHSA: Veterans and Military Families</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="veterans.html">veterans</a>, <a href="family.html">family</a>, <a href="substance abuse.html">substance abuse</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br /><a class="title" href="https://github.com/nprapps/mental-health">A Silent Epidemic</a><br />
+<a href="veterans.html">veterans</a>, <a href="family.html">family</a>, <a href="substance_abuse.html">substance_abuse</a>, <a href="USA.html">USA</a>, <a href="USA.html">government</a><br /><br /><a class="title" href="https://github.com/nprapps/mental-health">A Silent Epidemic</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="MIT.html">MIT</a>, <a href="visual_story.html">visual_story</a>, <a href="public_schools.html">public_schools</a>, <a href="USA.html">USA</a>, <a href="python.html">python</a>, <a href="nodejs.html">nodejs</a>, <a href="nodejs.html">education</a><br /><br />
