--- a/collaborative.html
+++ b/collaborative.html
@@ -14,7 +14,10 @@
 <a href="doctors.html">doctors</a>, <a href="human_rights.html">human_rights</a>, <a href="news.html">news</a>, <a href="blogs.html">blogs</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">AHRP</a><br /><br /><a class="title" href="https://rxisk.org/blog/">RxISK blog</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="blogs.html">blogs</a>, <a href="medication.html">medication</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">doctors</a><br /><br /><a class="title" href="https://acanvasoftheminds.com/">A Canvas of the Minds</a><br />
+<a href="blogs.html">blogs</a>, <a href="medication.html">medication</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">doctors</a><br /><br /><a class="title" href="http://selfcare.tech">selfcare.tech</a><br />
+<p class="date">date: na<br />
+</p>
+<a href="selfcare.html">selfcare</a>, <a href="collaborative.html">collaborative</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="directory.html">technology</a><br /><br /><a class="title" href="https://acanvasoftheminds.com/">A Canvas of the Minds</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="personal_stories.html">personal_stories</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">blogs</a><br /><br />
