--- a/conflicts-of-interest.html
+++ b/conflicts-of-interest.html
@@ -11,7 +11,7 @@
 <a class="title" href="http://a.co/acYNpoJ">How We Do Harm: A Doctor Breaks Ranks About Being Sick in America</a><br />
 <p class="date">date: 2017-09-23<br />
 </p>
-<a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Otis Webb Brawley.html">Otis Webb Brawley</a>, <a href="health care.html">health care</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts-of-interest</a><br /><br />
+<a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Otis_Webb_Brawley.html">Otis_Webb_Brawley</a>, <a href="health_care.html">health_care</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts-of-interest</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
