--- a/conflicts_of_interest.html
+++ b/conflicts_of_interest.html
@@ -11,7 +11,7 @@
 <a class="title" href="http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/">Culling the $$$ Evidence: National Alliance for Mental Illness</a><br />
 <p class="date">date: 2009-04-18<br />
 </p>
-<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="human rights.html">human rights</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts_of_interest</a><br /><br />
+<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts_of_interest</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
