--- a/directory.html
+++ b/directory.html
@@ -11,7 +11,10 @@
 <a class="title" href="https://www.ruok.org.au/">R U OK?</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="communication.html">communication</a>, <a href="support.html">support</a>, <a href="suicide prevention.html">suicide prevention</a>, <a href="crisis.html">crisis</a>, <a href="directory.html">directory</a>, <a href="resources.html">resources</a>, <a href="resources.html">Australia</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institue</a><br />
+<a href="communication.html">communication</a>, <a href="support.html">support</a>, <a href="suicide_prevention.html">suicide_prevention</a>, <a href="crisis.html">crisis</a>, <a href="directory.html">directory</a>, <a href="resources.html">resources</a>, <a href="resources.html">Australia</a><br /><br /><a class="title" href="http://selfcare.tech">selfcare.tech</a><br />
+<p class="date">date: na<br />
+</p>
+<a href="selfcare.html">selfcare</a>, <a href="collaborative.html">collaborative</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="directory.html">technology</a><br /><br /><a class="title" href="https://www.blackdoginstitute.org.au/">Black Dog Institute</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="workplace.html">workplace</a>, <a href="community.html">community</a>, <a href="resources.html">resources</a>, <a href="directory.html">directory</a>, <a href="education.html">education</a>, <a href="training.html">training</a>, <a href="training.html">research</a><br /><br />
