--- a/emergency.html
+++ b/emergency.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://www.veteranscrisisline.net/GetHelp/ResourceLocator.aspx">Veterans Crisis Line</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="crisis.html">crisis</a>, <a href="emergency.html">emergency</a>, <a href="emergency.html">suicide prevention</a><br /><br />
+<a href="veterans.html">veterans</a>, <a href="USA.html">USA</a>, <a href="crisis.html">crisis</a>, <a href="emergency.html">emergency</a>, <a href="emergency.html">suicide_prevention</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
