--- a/human_rights.html
+++ b/human_rights.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1>human_rights (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
-<a class="title" href="http://ahrp.org/">Alliance for Human Research Protection</a><br />
+<a class="title" href="http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=21689&LangID=E">World needs “revolution” in mental health care – UN rights expert</a><br />
+<p class="date">date: 13 Sep 2014<br />
+</p>
+<a href="doctors.html">doctors</a>, <a href="press_releases.html">press_releases</a>, <a href="press_releases.html">human_rights</a><br /><br /><a class="title" href="http://ahrp.org/">Alliance for Human Research Protection</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="doctors.html">doctors</a>, <a href="human_rights.html">human_rights</a>, <a href="news.html">news</a>, <a href="blogs.html">blogs</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">AHRP</a><br /><br /><a class="title" href="http://mindfreedom.org/">MindFreedom International</a><br />
@@ -17,7 +20,10 @@
 <a href="human_rights.html">human_rights</a>, <a href="news.html">news</a>, <a href="news.html">advocacy</a><br /><br /><a class="title" href="http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/">Culling the $$$ Evidence: National Alliance for Mental Illness</a><br />
 <p class="date">date: 2009-04-18<br />
 </p>
-<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="human rights.html">human rights</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts_of_interest</a><br /><br />
+<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts_of_interest</a><br /><br /><a class="title" href="http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/">Culling the $$$ Evidence: National Alliance for Mental Illness</a><br />
+<p class="date">date: 2009-04-18<br />
+</p>
+<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts_of_interest</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
