--- a/ignore.html
+++ b/ignore.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://www.quora.com/What-are-mental-health-symptoms-you-should-never-ignore">What are mental health symptoms you should never ignore?</a><br />
 <p class="date">date: 2017-09-25<br />
 </p>
-<a href="mental health.html">mental health</a>, <a href="symptoms.html">symptoms</a>, <a href="symptoms.html">ignore</a><br /><br />
+<a href="mental_health.html">mental_health</a>, <a href="symptoms.html">symptoms</a>, <a href="symptoms.html">ignore</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
