--- a/illness.html
+++ b/illness.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://natashatracy.com/bipolar-disorder/bipolar-invisible-illness-lets-visible/">Bipolar Is an Invisible Illness — Let’s Make It Visible</a><br />
 <p class="date">date: 2017-10-01<br />
 </p>
-<a href="bipolar disorder.html">bipolar disorder</a>, <a href="bipolar disorder.html">illness</a><br /><br />
+<a href="bipolar_disorder.html">bipolar_disorder</a>, <a href="bipolar_disorder.html">illness</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
