--- a/journalism.html
+++ b/journalism.html
@@ -11,7 +11,7 @@
 <a class="title" href="http://a.co/8ZkS4i5">Anatomy of an Epidemic: Magic Bullets, Psychiatric Drugs, and the Astonishing Rise of Mental Illness in America</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="Robert Whitaker.html">Robert Whitaker</a>, <a href="journalism.html">journalism</a>, <a href="medication.html">medication</a>, <a href="medication.html">books</a><br /><br /><a class="title" href="https://www.madinamerica.com/">Mad in America</a><br />
+<a href="Robert_Whitaker.html">Robert_Whitaker</a>, <a href="journalism.html">journalism</a>, <a href="medication.html">medication</a>, <a href="medication.html">books</a><br /><br /><a class="title" href="https://www.madinamerica.com/">Mad in America</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="journalism.html">journalism</a>, <a href="news.html">news</a>, <a href="blogs.html">blogs</a>, <a href="stories.html">stories</a>, <a href="stories.html">social_justice</a><br /><br /><a class="title" href="http://a.co/0BuSDiT">Side Effects: A Prosecutor, a Whistleblower, and a Bestselling Antidepressant on Trial</a><br />
@@ -20,7 +20,7 @@
 <a href="books.html">books</a>, <a href="Alison_Bass.html">Alison_Bass</a>, <a href="journalism.html">journalism</a>, <a href="journalism.html">medication</a><br /><br /><a class="title" href="http://a.co/esrRJm4">Psychiatry Under the Influence: Institutional Corruption, Social Injury, and Prescriptions for Reform</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="journalism.html">journalism</a>, <a href="Robert Whitaker.html">Robert Whitaker</a>, <a href="psychiatry.html">psychiatry</a>, <a href="medication.html">medication</a>, <a href="medication.html">Lisa Cosgrove</a><br /><br />
+<a href="books.html">books</a>, <a href="journalism.html">journalism</a>, <a href="Robert_Whitaker.html">Robert_Whitaker</a>, <a href="psychiatry.html">psychiatry</a>, <a href="medication.html">medication</a>, <a href="medication.html">Lisa_Cosgrove</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
