--- a/mates.html
+++ b/mates.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://www.health.qld.gov.au/news-alerts/news/men-how-to-have-conversation-mate-mental-health">Men: how to have a conversation with a mate about mental health</a><br />
 <p class="date">date: 2017-10-09<br />
 </p>
-<a href="men.html">men</a>, <a href="friendships.html">friendships</a>, <a href="mates.html">mates</a>, <a href="providing support.html">providing support</a>, <a href="advice.html">advice</a>, <a href="advice.html">Australia</a><br /><br />
+<a href="men.html">men</a>, <a href="friendships.html">friendships</a>, <a href="mates.html">mates</a>, <a href="providing_support.html">providing_support</a>, <a href="advice.html">advice</a>, <a href="advice.html">Australia</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
