--- a/pregnancy.html
+++ b/pregnancy.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://www.beyondblue.org.au/">Beyond Blue</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="Australia.html">Australia</a>, <a href="chat.html">chat</a>, <a href="forum.html">forum</a>, <a href="resources.html">resources</a>, <a href="LGBTQ.html">LGBTQ</a>, <a href="Aboriginal and Torres Strait Islander people.html">Aboriginal and Torres Strait Islander people</a>, <a href="community.html">community</a>, <a href="youth.html">youth</a>, <a href="pregnancy.html">pregnancy</a>, <a href="pregnancy.html">seniors</a><br /><br />
+<a href="Australia.html">Australia</a>, <a href="chat.html">chat</a>, <a href="forum.html">forum</a>, <a href="resources.html">resources</a>, <a href="LGBTQ.html">LGBTQ</a>, <a href="Aboriginal_and_Torres_Strait_Islander_people.html">Aboriginal_and_Torres_Strait_Islander_people</a>, <a href="community.html">community</a>, <a href="youth.html">youth</a>, <a href="pregnancy.html">pregnancy</a>, <a href="pregnancy.html">seniors</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
