--- a/press_releases.html
+++ b/press_releases.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>press releases (Under Construction) - Mental Health and Wellness Knowledge Base</title>
+<title>press_releases (Under Construction) - Mental Health and Wellness Knowledge Base</title>
 <link rel="stylesheet" type="text/css"href="mhwkb_style.css">
 </head>
 <body>
-<h1>press releases (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
+<h1>press_releases (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
 <a class="title" href="http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=21689&LangID=E">World needs “revolution” in mental health care – UN rights expert</a><br />
 <p class="date">date: 13 Sep 2014<br />
 </p>
-<a href="doctors.html">doctors</a>, <a href="press releases.html">press releases</a>, <a href="press releases.html">human rights</a><br /><br />
+<a href="doctors.html">doctors</a>, <a href="press_releases.html">press_releases</a>, <a href="press_releases.html">human_rights</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
