--- a/psychiatry.html
+++ b/psychiatry.html
@@ -11,7 +11,7 @@
 <a class="title" href="http://a.co/esrRJm4">Psychiatry Under the Influence: Institutional Corruption, Social Injury, and Prescriptions for Reform</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="books.html">books</a>, <a href="journalism.html">journalism</a>, <a href="Robert Whitaker.html">Robert Whitaker</a>, <a href="psychiatry.html">psychiatry</a>, <a href="medication.html">medication</a>, <a href="medication.html">Lisa Cosgrove</a><br /><br />
+<a href="books.html">books</a>, <a href="journalism.html">journalism</a>, <a href="Robert_Whitaker.html">Robert_Whitaker</a>, <a href="psychiatry.html">psychiatry</a>, <a href="medication.html">medication</a>, <a href="medication.html">Lisa_Cosgrove</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
