--- a/support.html
+++ b/support.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://www.ruok.org.au/">R U OK?</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="communication.html">communication</a>, <a href="support.html">support</a>, <a href="suicide prevention.html">suicide prevention</a>, <a href="crisis.html">crisis</a>, <a href="directory.html">directory</a>, <a href="resources.html">resources</a>, <a href="resources.html">Australia</a><br /><br />
+<a href="communication.html">communication</a>, <a href="support.html">support</a>, <a href="suicide_prevention.html">suicide_prevention</a>, <a href="crisis.html">crisis</a>, <a href="directory.html">directory</a>, <a href="resources.html">resources</a>, <a href="resources.html">Australia</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
