--- a/blogs.html
+++ b/blogs.html
@@ -23,7 +23,10 @@
 <a href="journalism.html">journalism</a>, <a href="news.html">news</a>, <a href="blogs.html">blogs</a>, <a href="stories.html">stories</a>, <a href="stories.html">social_justice</a><br /><br /><a class="title" href="https://rxisk.org/blog/">RxISK blog</a><br />
 <p class="date">date: na<br />
 </p>
-<a href="blogs.html">blogs</a>, <a href="medication.html">medication</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">doctors</a><br /><br /><a class="title" href="http://lovenotessuicideletters.blogspot.com/">LoveNotes&SuicideLetters</a><br />
+<a href="blogs.html">blogs</a>, <a href="medication.html">medication</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">doctors</a><br /><br /><a class="title" href="https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/">Does a Suicide Go To Heaven?</a><br />
+<p class="date">date: 2013-05-27<br />
+</p>
+<a href="wordpress.html">wordpress</a>, <a href="blogs.html">blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="mothers.html">children</a><br /><br /><a class="title" href="http://lovenotessuicideletters.blogspot.com/">LoveNotes&SuicideLetters</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="blogs.html">blogs</a>, <a href="self-expression.html">self-expression</a>, <a href="personal_stories.html">personal_stories</a>, <a href="youth.html">youth</a>, <a href="youth.html">no-longer-updated</a><br /><br /><a class="title" href="https://acanvasoftheminds.com/">A Canvas of the Minds</a><br />
