--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <a class="title" href="https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/">Does a Suicide Go To Heaven?</a><br />
 <p class="date">date: 2013-05-27<br />
 </p>
-<a href="wordpress"_"blogs.html">wordpress"_"blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="children.html">children</a><br /><br />
+<a href="wordpress.html">wordpress</a>, <a href="blogs.html">blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="children.html">children</a><br /><br />
 <a class="title" href="https://behavioraltech.org/resources/">Dialectical Behavior Therapy (DBT) Resources</a><br />
 <p class="date">date: na<br />
 </p>
@@ -143,7 +143,7 @@
 <a class="title" href="http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/">Culling the $$$ Evidence: National Alliance for Mental Illness</a><br />
 <p class="date">date: 2009-04-18<br />
 </p>
-<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="conflicts_of_interest.html">conflicts_of_interest</a>, <a href="AHRP.html">AHRP</a><br /><br />
+<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="conflicts-of-interest.html">conflicts-of-interest</a>, <a href="AHRP.html">AHRP</a><br /><br />
 <a class="title" href="https://centerformsc.org/">Center for Mindful Self-Compassion</a><br />
 <p class="date">date: na<br />
 </p>
