--- a/suicide.html
+++ b/suicide.html
@@ -14,7 +14,7 @@
 <a href="viewpoint.html">viewpoint</a>, <a href="viewpoint.html">suicide</a><br /><br /><a class="title" href="https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/">Does a Suicide Go To Heaven?</a><br />
 <p class="date">date: 2013-05-27<br />
 </p>
-<a href="wordpress"_"blogs.html">wordpress"_"blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="mothers.html">children</a><br /><br />
+<a href="wordpress.html">wordpress</a>, <a href="blogs.html">blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="mothers.html">children</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
