--- a/AHRP.html
+++ b/AHRP.html
@@ -14,7 +14,7 @@
 <a href="doctors.html">doctors</a>, <a href="human_rights.html">human_rights</a>, <a href="news.html">news</a>, <a href="blogs.html">blogs</a>, <a href="collaborative.html">collaborative</a>, <a href="collaborative.html">AHRP</a><br /><br /><a class="title" href="http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/">Culling the $$$ Evidence: National Alliance for Mental Illness</a><br />
 <p class="date">date: 2009-04-18<br />
 </p>
-<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="conflicts_of_interest.html">conflicts_of_interest</a>, <a href="conflicts_of_interest.html">AHRP</a><br /><br />
+<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="conflicts-of-interest.html">conflicts-of-interest</a>, <a href="conflicts-of-interest.html">AHRP</a><br /><br />
   <br /><br />
   <a href="index.html">Back Home</a><br />
   <a href="https://github.com/andy5995/mhwkb">About</a>
