--- a/conflicts-of-interest.html
+++ b/conflicts-of-interest.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1>conflicts-of-interest (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
-<a class="title" href="http://a.co/acYNpoJ">How We Do Harm: A Doctor Breaks Ranks About Being Sick in America</a><br />
+<a class="title" href="http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/">Culling the $$$ Evidence: National Alliance for Mental Illness</a><br />
+<p class="date">date: 2009-04-18<br />
+</p>
+<a href="advocacy.html">advocacy</a>, <a href="human_rights.html">human_rights</a>, <a href="medication.html">medication</a>, <a href="conflicts-of-interest.html">conflicts-of-interest</a>, <a href="conflicts-of-interest.html">AHRP</a><br /><br /><a class="title" href="http://a.co/acYNpoJ">How We Do Harm: A Doctor Breaks Ranks About Being Sick in America</a><br />
 <p class="date">date: 2017-09-23<br />
 </p>
 <a href="books.html">books</a>, <a href="doctors.html">doctors</a>, <a href="Otis_Webb_Brawley.html">Otis_Webb_Brawley</a>, <a href="health_care.html">health_care</a>, <a href="medication.html">medication</a>, <a href="medication.html">conflicts-of-interest</a><br /><br />
