--- a/spirituality.html
+++ b/spirituality.html
@@ -11,7 +11,7 @@
 <a class="title" href="https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/">Does a Suicide Go To Heaven?</a><br />
 <p class="date">date: 2013-05-27<br />
 </p>
-<a href="wordpress"_"blogs.html">wordpress"_"blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="mothers.html">children</a><br /><br /><a class="title" href="https://plumvillage.org/">Plum Village - Mindfulness Practice Center</a><br />
+<a href="wordpress.html">wordpress</a>, <a href="blogs.html">blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="mothers.html">children</a><br /><br /><a class="title" href="https://plumvillage.org/">Plum Village - Mindfulness Practice Center</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="Buddhism.html">Buddhism</a>, <a href="mindfulness.html">mindfulness</a>, <a href="Thich_Nhat_Hanh.html">Thich_Nhat_Hanh</a>, <a href="Thich_Nhat_Hanh.html">spirituality</a><br /><br />
