--- a/wordpress.html
+++ b/wordpress.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1>wordpress (Under Construction) - Mental Health and Wellness Knowledge Base</h1>
-<a class="title" href="https://psychsurvivoryyc.wordpress.com/">Psych Survivor YYC</a><br />
+<a class="title" href="https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/">Does a Suicide Go To Heaven?</a><br />
+<p class="date">date: 2013-05-27<br />
+</p>
+<a href="wordpress.html">wordpress</a>, <a href="blogs.html">blogs</a>, <a href="christian.html">christian</a>, <a href="spirituality.html">spirituality</a>, <a href="suicide.html">suicide</a>, <a href="mothers.html">mothers</a>, <a href="mothers.html">children</a><br /><br /><a class="title" href="https://psychsurvivoryyc.wordpress.com/">Psych Survivor YYC</a><br />
 <p class="date">date: na<br />
 </p>
 <a href="wordpress.html">wordpress</a>, <a href="blogs.html">blogs</a>, <a href="psychiatric_survivor_movement.html">psychiatric_survivor_movement</a>, <a href="psychiatric_survivor_movement.html">Canada</a><br /><br />
