pushing site build

--- a/tag_cloud/index.html
+++ b/tag_cloud/index.html
@@ -97,8 +97,8 @@
   
     <span class="site-tag">
       <a href="/tag/adhd/"
-          style="font-size: 92%">
-              ADHD (3)
+          style="font-size: 96%">
+              ADHD (4)
       </a>
     </span>
   
@@ -132,8 +132,8 @@
   
     <span class="site-tag">
       <a href="/tag/bbc/"
-          style="font-size: 84%">
-              BBC (1)
+          style="font-size: 88%">
+              BBC (2)
       </a>
     </span>
   
@@ -167,8 +167,8 @@
   
     <span class="site-tag">
       <a href="/tag/buddhism/"
-          style="font-size: 92%">
-              Buddhism (3)
+          style="font-size: 96%">
+              Buddhism (4)
       </a>
     </span>
   
@@ -460,6 +460,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/natasha-tracy/"
+          style="font-size: 84%">
+              Natasha Tracy (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/nellie-bly/"
           style="font-size: 84%">
               Nellie Bly (1)
@@ -614,6 +621,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/thich-nhat-hanh/"
+          style="font-size: 84%">
+              Thich Nhat Hanh (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/twitter/"
           style="font-size: 84%">
               Twitter (1)
@@ -673,6 +687,13 @@
       <a href="/tag/zenobia-morrill/"
           style="font-size: 84%">
               Zenobia Morrill (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/abandonment/"
+          style="font-size: 84%">
+              abandonment (1)
       </a>
     </span>
   
@@ -762,8 +783,8 @@
   
     <span class="site-tag">
       <a href="/tag/authors/"
-          style="font-size: 88%">
-              authors (2)
+          style="font-size: 92%">
+              authors (3)
       </a>
     </span>
   
@@ -776,15 +797,15 @@
   
     <span class="site-tag">
       <a href="/tag/bipolar-disorder/"
-          style="font-size: 96%">
-              bipolar disorder (4)
+          style="font-size: 100%">
+              bipolar disorder (5)
       </a>
     </span>
   
     <span class="site-tag">
       <a href="/tag/blogs/"
-          style="font-size: 160%">
-              blogs (20)
+          style="font-size: 164%">
+              blogs (21)
       </a>
     </span>
   
@@ -804,8 +825,8 @@
   
     <span class="site-tag">
       <a href="/tag/books/"
-          style="font-size: 136%">
-              books (14)
+          style="font-size: 140%">
+              books (15)
       </a>
     </span>
   
@@ -1343,8 +1364,8 @@
   
     <span class="site-tag">
       <a href="/tag/mindfulness/"
-          style="font-size: 100%">
-              mindfulness (5)
+          style="font-size: 104%">
+              mindfulness (6)
       </a>
     </span>
   
@@ -1357,8 +1378,8 @@
   
     <span class="site-tag">
       <a href="/tag/mothers/"
-          style="font-size: 88%">
-              mothers (2)
+          style="font-size: 92%">
+              mothers (3)
       </a>
     </span>
   
@@ -1399,8 +1420,8 @@
   
     <span class="site-tag">
       <a href="/tag/news/"
-          style="font-size: 120%">
-              news (10)
+          style="font-size: 124%">
+              news (11)
       </a>
     </span>
   
@@ -1476,8 +1497,8 @@
   
     <span class="site-tag">
       <a href="/tag/personal-stories/"
-          style="font-size: 120%">
-              personal stories (10)
+          style="font-size: 124%">
+              personal stories (11)
       </a>
     </span>
   
@@ -1742,8 +1763,8 @@
   
     <span class="site-tag">
       <a href="/tag/spirituality/"
-          style="font-size: 92%">
-              spirituality (3)
+          style="font-size: 96%">
+              spirituality (4)
       </a>
     </span>
   
@@ -1777,8 +1798,8 @@
   
     <span class="site-tag">
       <a href="/tag/studies/"
-          style="font-size: 96%">
-              studies (4)
+          style="font-size: 100%">
+              studies (5)
       </a>
     </span>
   
@@ -1791,8 +1812,8 @@
   
     <span class="site-tag">
       <a href="/tag/suicide/"
-          style="font-size: 92%">
-              suicide (3)
+          style="font-size: 96%">
+              suicide (4)
       </a>
     </span>
   
