push site build

--- a/tag_cloud/index.html
+++ b/tag_cloud/index.html
@@ -751,6 +751,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/altered-states/"
+          style="font-size: 84%">
+              altered states (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/anonymous/"
           style="font-size: 84%">
               anonymous (1)
@@ -1073,6 +1080,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/diseases/"
+          style="font-size: 84%">
+              diseases (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/doctors/"
           style="font-size: 164%">
               doctors (21)
@@ -1104,6 +1118,13 @@
       <a href="/tag/emotions/"
           style="font-size: 88%">
               emotions (2)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/essays/"
+          style="font-size: 92%">
+              essays (3)
       </a>
     </span>
   
@@ -1283,6 +1304,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/illness/"
+          style="font-size: 84%">
+              illness (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/immune-system/"
           style="font-size: 84%">
               immune system (1)
@@ -1451,6 +1479,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/nature/"
+          style="font-size: 84%">
+              nature (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/negativity/"
           style="font-size: 92%">
               negativity (3)
@@ -1459,8 +1494,8 @@
   
     <span class="site-tag">
       <a href="/tag/neuroscience/"
-          style="font-size: 92%">
-              neuroscience (3)
+          style="font-size: 96%">
+              neuroscience (4)
       </a>
     </span>
   
@@ -1473,8 +1508,8 @@
   
     <span class="site-tag">
       <a href="/tag/non-pharmacological/"
-          style="font-size: 104%">
-              non pharmacological (6)
+          style="font-size: 108%">
+              non pharmacological (7)
       </a>
     </span>
   
@@ -1605,6 +1640,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/psychedelic-drugs/"
+          style="font-size: 84%">
+              psychedelic drugs (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/psychiatric-survivors/"
           style="font-size: 92%">
               psychiatric survivors (3)
@@ -1613,8 +1655,8 @@
   
     <span class="site-tag">
       <a href="/tag/psychiatry/"
-          style="font-size: 92%">
-              psychiatry (3)
+          style="font-size: 96%">
+              psychiatry (4)
       </a>
     </span>
   
@@ -1622,6 +1664,13 @@
       <a href="/tag/psychology/"
           style="font-size: 88%">
               psychology (2)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/psychotherapy/"
+          style="font-size: 84%">
+              psychotherapy (1)
       </a>
     </span>
   
@@ -1878,6 +1927,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/subcultures/"
+          style="font-size: 84%">
+              subcultures (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/substance-abuse/"
           style="font-size: 88%">
               substance abuse (2)
@@ -2021,6 +2077,13 @@
       <a href="/tag/web-portal/"
           style="font-size: 84%">
               web portal (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/wellbeing/"
+          style="font-size: 84%">
+              wellbeing (1)
       </a>
     </span>
   
